--- a/`school website/school.css
+++ b/`school website/school.css
@@ -25,7 +25,7 @@ border: none;
   font-size: 20px;
   text-align: center;
   border:10px white solid;
-  background-color: rgb(232, 91, 196);
+  background-color: white;
   font-family: 'texgyreadventorbold';
   color: white;
    transition-duration: 1s;
