--- a/`school website/school.css
+++ b/`school website/school.css
@@ -24,7 +24,7 @@ border: none;
   padding: 30px;
   font-size: 20px;
   text-align: center;
-  border:10px white solid;
+  border:10px rgb(23, 164, 59) solid;
   background-color: white;
   font-family: 'texgyreadventorbold';
   color: rgb(23, 164, 59);
